fix(match2): game row font size unexpceted increase in #4969 (#4982)
fix(match2, css): removed a line too much in #4969

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -522,6 +522,7 @@
 	//overflow: auto;
 	width: 330px;
 	flex-wrap: unset;
+	font-size: 13px;
 }
 
 /* Can remove after purge */
